# confluent-kafka-python

./: README.md  pyproject.toml
src/: 01-producer.py  config.py
