[tool.poetry]
name = "confluent-kafka-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "confluent_kafka_python"}]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
